crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__yield_from__unparenthesized.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/yield_from/unparenthesized.py
---
## AST

```
Module(
    ModModule {
        node_index: 0,
        range: 0..192,
        body: [
            Expr(
                StmtExpr {
                    node_index: 0,
                    range: 35..47,
                    value: YieldFrom(
                        ExprYieldFrom {
                            node_index: 0,
                            range: 35..47,
                            value: Name(
                                ExprName {
                                    node_index: 0,
                                    range: 46..47,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: 0,
                    range: 51..52,
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: 0,
                            range: 51..52,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: 0,
                    range: 89..104,
                    value: YieldFrom(
                        ExprYieldFrom {
                            node_index: 0,
                            range: 89..104,
                            value: Tuple(
                                ExprTuple {
                                    node_index: 0,
                                    range: 100..104,
                                    elts: [
                                        Name(
                                            ExprName {
                                                node_index: 0,
                                                range: 100..101,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                node_index: 0,
                                                range: 103..104,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: false,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: 0,
                    range: 168..192,
                    value: YieldFrom(
                        ExprYieldFrom {
                            node_index: 0,
                            range: 168..192,
                            value: Tuple(
                                ExprTuple {
                                    node_index: 0,
                                    range: 179..192,
                                    elts: [
                                        Name(
                                            ExprName {
                                                node_index: 0,
                                                range: 180..181,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        Starred(
                                            ExprStarred {
                                                node_index: 0,
                                                range: 183..191,
                                                value: BoolOp(
                                                    ExprBoolOp {
                                                        node_index: 0,
                                                        range: 184..191,
                                                        op: And,
                                                        values: [
                                                            Name(
                                                                ExprName {
                                                                    node_index: 0,
                                                                    range: 184..185,
                                                                    id: Name("x"),
                                                                    ctx: Load,
                                                                },
                                                            ),
                                                            Name(
                                                                ExprName {
                                                                    node_index: 0,
                                                                    range: 190..191,
                                                                    id: Name("y"),
                                                                    ctx: Load,
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: true,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Unparenthesized named expression
2 | yield from x := 1
  |              ^^ Syntax Error: Expected a statement
3 |
4 | # Unparenthesized tuple expression
  |


  |
4 | # Unparenthesized tuple expression
5 | yield from x, y
  |            ^^^^ Syntax Error: Unparenthesized tuple expression cannot be used here
6 |
7 | # This is a tuple expression parsing
  |


  |
7 | # This is a tuple expression parsing
8 | #          vvvvvvvvvvvvv
9 | yield from (x, *x and y)
  |                 ^^^^^^^ Syntax Error: Boolean expression cannot be used here
  |
